[project]
name = "comfyui-unianimate"
description = "a comfyui custom node for [a/UniAnimate](https://github.com/ali-vilab/UniAnimate)"
version = "1.0.0"
license = "LICENSE"
dependencies = ["moviepy", "PyYAML", "modelscope", "onnxruntime", "open-clip-torch", "opencv-python", "rotary-embedding-torch", "fairscale", "imageio-ffmpeg", "pytorch_lightning", "easydict"]

[project.urls]
Repository = "https://github.com/AIFSH/ComfyUI-UniAnimate"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-UniAnimate"
Icon = ""
